In the mobile view nav bar the calendar is not showing please fix that a

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -89,3 +89,12 @@ body {
     -moz-osx-font-smoothing: grayscale;
   }
 }
+
+@layer utilities {
+    .progress-bar-yellow .progress-indicator {
+        background-color: hsl(var(--chart-4));
+    }
+    .progress-bar-red .progress-indicator {
+        background-color: hsl(var(--destructive));
+    }
+}
